--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "volga-ui": "^0.0.4",
     "vue": "^3.2.41"
   },
   "devDependencies": {
